Add back link after posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,5 +8,5 @@ layout: default
   <span class="meta">{{ page.date | date_to_string }}</span>
 </h1>
 {{ content }}
-
+<p class="breadcrumb"><a href="/">&larr;Back Home</a></p>
 </div>
