Hide footer home link and put in a real apostrophe

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <a href="/" class="home">Home</a>
+  <!-- <a href="/" class="home">Home</a> -->
   <a href="http://twitter.com/goldenmeanie" title="Link out to Dribbble" class="service twitter" target="_blank">twitter</a>
   <a href="http://dribbble.com/goldenmeanie" title="Link out to Dribbble" class="service dribbble" target="_blank">dribbble</a>
   <a href="http://gimmebar.com/user/goldenmeanie" title="Link out to Gimme Bar" class="service gimmebar" target="_blank">Gimme Bar</a>
