--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,5 +34,6 @@
       {% include nav.html %}
       {% include bio.html %}
     </footer>
+    {% include analytics-snippet.html %}
   </body>
 </html>
