Move Elswhere blurb to the header

--- a/_includes/elsewhere.html
+++ b/_includes/elsewhere.html
@@ -1,4 +1,3 @@
-<h1>Elsewhere...</h1>
 <p>
-  Alex works for <a href="http://batchbook.com" class="bb">Batchbook</a>. Side projects include <a href="http://thehopperdeck.com">The Hopper Deck</a> and <a href="http://thebenchmarkbook.com">The Benchmarks</a>. Past side projects include <a href="http://minivite.com">Minivite</a> and the (sniff) now defunct <a href="http://twalala.com">Twalala</a>.
+  Alex works for <a href="http://buildium.com" class="bldm">Buildium</a>. Side projects include <a href="http://thehopperdeck.com">The Hopper Deck</a> and <a href="http://thebenchmarkbook.com">The Benchmarks</a>. Past side projects include <a href="http://minivite.com">Minivite</a> and the (sniff) now defunct <a href="http://twalala.com">Twalala</a>.
 </p>
