--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
       <h1>
         <a href="/">{{ site.name }}</a>
       </h1>
+      <section class="elsewhere">
+        {% include elsewhere.html %}
+      </section>
     </header>
 
     <section class="bigbox">
