--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ page.title }}</title>
-    <meta name="viewport" content="width=device-width">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+  {% include head.html %}
 
-  </head>
   <body>
-    <header class="header">
-      <h1>
-        <a href="/">{{ site.name }}</a>
-      </h1>
-    </header>
+
+    {% include site-header.html %}
 
     <section class="bigbox">
 
@@ -23,10 +13,9 @@
 
     </section>
 
-    <footer class="site-footer">
-      {% include nav.html %}
-      {% include bio.html %}
-    </footer>
+    {% include site-footer.html %}
+
     {% include analytics-snippet.html %}
+
   </body>
 </html>
