--- a/_sass/toc.scss
+++ b/_sass/toc.scss
@@ -1,5 +1,5 @@
 .index {
-  margin: 1em 3% 3em;
+  margin: 0 0 3em;
   h2 {
     font-size: 3em;
     margin-left: 4.45em;
@@ -9,10 +9,10 @@
     list-style: none;
     font-family: Populaire Regular;
     font-size: 2.5em;
-    margin: .5em 0;
-    padding: 0;
+    margin: 0;
+    padding: .5em 1em;
     a {
-      color: $subdued;
+      color: $meanie;
       display: block;
       text-decoration: none;
       &:hover {
@@ -26,6 +26,15 @@
 }
 .toc-entry {
   position: relative;
+  &:hover {
+    animation: wash 1200ms ease-in-out infinite alternate;
+    // background: red;
+    h2,
+    .excerpt
+      {
+      animation: pulse 1200ms ease-in-out infinite alternate;
+    }
+  }
   .time-stamp {
     color: rgba(0,0,0,0.4);
     display: inline-block;
