--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -2,7 +2,7 @@ header {
   padding: .25em .5em 2em;
   h1 {
     font-size: 5em;
-    margin: .25em 3% 0;
+    margin: .25em 1.5rem 0;
   }
   a {
     color: $meanie;
