Tweak bio line and replace pinboard with are.na

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,5 +2,5 @@
   <!-- <a href="/" class="home">Home</a> -->
   <a href="http://twitter.com/goldenmeanie" title="Link out to Dribbble" class="service twitter" target="_blank">twitter</a>
   <a href="http://dribbble.com/goldenmeanie" title="Link out to Dribbble" class="service dribbble" target="_blank">dribbble</a>
-  <a href="http://pinboard.com/u:goldenmeanie" title="Link out to Pinboard Bookmarks" class="service pinboard" target="_blank">Pinboard</a>
+  <a href="http://are.na/alextaylor" title="Visual bookmarks" class="service are-na" target="_blank">Are.na</a>
 </nav>
